force-app/main/default/objects/Dealer_Financing_Request__c/Dealer_Financing_Request__c.object-meta.xml
<CustomObject>
    <description>Object used to track dealer financing requests, approvals, and statuses</description>
    <label>Dealer Financing Request</label>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>Financing Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Financing Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>