force-app/main/default/objects/Dealer_Financing_Request__c/fields/Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Amount_Available__c</fullName>
    <formula>IF( TEXT(Status__c) == &quot;Approved&quot;,Amount_Requested__c - Amount_Used_Calculated__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>