force-app/main/default/objects/Dealer_Financing_Request__c/fields/Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>Amount_Used__c</fullName>
    <description>Amount of approved funds used to apply towards invoices</description>
    <inlineHelpText>Amount of approved funds used to apply towards invoices</inlineHelpText>
    <label>Amount Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>