force-app/main/default/objects/Dealer_Financing_Request__c/fields/Amount_Used_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Amount_Used_Calculated__c</fullName>
    <label>Amount Used Calculated</label>
    <summarizedField>Financing_Amount_Used__c.Amount_Used__c</summarizedField>
    <summaryForeignKey>Financing_Amount_Used__c.Dealer_Financing_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>