force-app/main/default/objects/Dealer_Financing_Request__c/fields/Approval_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiry_Date__c</fullName>
    <description>Date the approval expires - typically 6 months after approval date</description>
    <inlineHelpText>Date the approval expires - typically 6 months after approval date</inlineHelpText>
    <label>Approval Expiry Date</label>
    <type>Date</type>
</CustomField>