force-app/main/default/objects/Dealer_Financing_Request__c/fields/Date_of_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expiry__c</fullName>
    <description>Calculated expiry date IF Financing Company is TCF than  Approval Date + 180 days ELSE Approval Date + 120 days</description>
    <formula>IF( ISPICKVAL( Finance_Company__c , &apos;TCF&apos; ), Date_of_Approval__c + 180, Date_of_Approval__c + 120 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Expiry</label>
    <type>Date</type>
</CustomField>