force-app/main/default/objects/Dealer_Financing_Request__c/fields/Finance_Company__c.field-meta.xml
<CustomField>
    <fullName>Finance_Company__c</fullName>
    <description>Finance company that financing request was placed through</description>
    <label>Finance Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>TCF</fullName>
            </value>
            <value>
                <fullName>Northpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>