force-app/main/default/objects/Dealer_Financing_Request__c/validationRules/Status_restricts_Amount_Used.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_restricts_Amount_Used</fullName>
    <active>true</active>
    <description>Status must be approved before Amount Used is used</description>
    <errorConditionFormula>AND(text(Status__c) != &quot;Approved&quot;, Amount_Used__c &gt;0)</errorConditionFormula>
    <errorMessage>Amount cannot be Used unless Status is Approved</errorMessage>
</ValidationRule>